{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 20,
  "lineage": "86304e50-3a24-fe27-7087-cb2a516d4ae0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "risingIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:internet-gateway/igw-03229dd903e04448e",
            "id": "igw-03229dd903e04448e",
            "owner_id": "194729441513",
            "tags": {
              "Name": "rising-IGW"
            },
            "tags_all": {
              "Name": "rising-IGW"
            },
            "vpc_id": "vpc-035eb383902ea4848"
          },
          "dependencies": [
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rising-pri-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:route-table/rtb-048f8cc2d034cb034",
            "id": "rtb-048f8cc2d034cb034",
            "owner_id": "194729441513",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rising-private-route"
            },
            "tags_all": {
              "Name": "rising-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-035eb383902ea4848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rising-pub-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:route-table/rtb-0c95bcc3ac87cd81d",
            "id": "rtb-0c95bcc3ac87cd81d",
            "owner_id": "194729441513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03229dd903e04448e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rising-public-route"
            },
            "tags_all": {
              "Name": "rising-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-035eb383902ea4848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.risingIGW",
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rising-pri-RTAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b920a9101263bdc",
            "route_table_id": "rtb-048f8cc2d034cb034",
            "subnet_id": "subnet-05a3c9ae2fa61f95d"
          },
          "dependencies": [
            "aws_route_table.rising-pri-Route",
            "aws_subnet.rising-pri-sub1",
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rising-pri-RTAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9bc7fb71b9d7d77",
            "route_table_id": "rtb-048f8cc2d034cb034",
            "subnet_id": "subnet-06a653012551454cb"
          },
          "dependencies": [
            "aws_route_table.rising-pri-Route",
            "aws_subnet.rising-pri-sub2",
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rising-pub-RTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bcd885c0f5035d1",
            "route_table_id": "rtb-0c95bcc3ac87cd81d",
            "subnet_id": "subnet-03c346bb5f63f8dd6"
          },
          "dependencies": [
            "aws_internet_gateway.risingIGW",
            "aws_route_table.rising-pub-Route",
            "aws_subnet.rising-pub-sub",
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rising-pri-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:security-group/sg-07e9b577304913a31",
            "description": "rising-pri-SG",
            "egress": [],
            "id": "sg-07e9b577304913a31",
            "ingress": [],
            "name": "rising-pri-SG",
            "name_prefix": "",
            "owner_id": "194729441513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rising-pri-SG"
            },
            "tags_all": {
              "Name": "rising-pri-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-035eb383902ea4848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rising-pub-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:security-group/sg-0a46a477791b75f97",
            "description": "rising -pub-SG",
            "egress": [],
            "id": "sg-0a46a477791b75f97",
            "ingress": [],
            "name": "rising-pub-SG",
            "name_prefix": "",
            "owner_id": "194729441513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rising-pub-SG"
            },
            "tags_all": {
              "Name": "rising-pub-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-035eb383902ea4848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rising-pri-SGRulesRDSegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2911789251",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e9b577304913a31",
            "self": false,
            "source_security_group_id": "sg-0a46a477791b75f97",
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rising-pri-SG",
            "aws_security_group.rising-pub-SG",
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rising-pri-SGRulesRDSingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1224125358",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e9b577304913a31",
            "self": false,
            "source_security_group_id": "sg-0a46a477791b75f97",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rising-pri-SG",
            "aws_security_group.rising-pub-SG",
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rising-pub-SGRulesALLegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1016591194",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a46a477791b75f97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rising-pub-SG",
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rising-pub-SGRulesHTTPingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-235010061",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a46a477791b75f97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rising-pub-SG",
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rising-pub-SGRulesSSHingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3096159672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a46a477791b75f97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rising-pub-SG",
            "aws_vpc.rising-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rising-pri-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-05a3c9ae2fa61f95d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a3c9ae2fa61f95d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rising-private-subnet1"
            },
            "tags_all": {
              "Name": "rising-private-subnet1"
            },
            "vpc_id": "vpc-035eb383902ea4848"
          },
          "dependencies": [
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rising-pri-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-06a653012551454cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a653012551454cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rising-private-subnet2"
            },
            "tags_all": {
              "Name": "rising-private-subnet2"
            },
            "vpc_id": "vpc-035eb383902ea4848"
          },
          "dependencies": [
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rising-pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-03c346bb5f63f8dd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.5.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c346bb5f63f8dd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rising-public-subnet"
            },
            "tags_all": {
              "Name": "rising-public-subnet"
            },
            "vpc_id": "vpc-035eb383902ea4848"
          },
          "dependencies": [
            "aws_vpc.rising-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rising-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:vpc/vpc-035eb383902ea4848",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-0ad333a64d843d138",
            "default_route_table_id": "rtb-03fc3778e08380f4b",
            "default_security_group_id": "sg-092b9cd32e2e5af89",
            "dhcp_options_id": "dopt-0772b700676ea6fcf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-035eb383902ea4848",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fc3778e08380f4b",
            "owner_id": "194729441513"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}